# urban-greening-image-classifier

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  data_augmentation.py  data_cleaning.py  docker-compose.yml  ensemble_predictions.py  export_cv_predictions.py  pyproject.toml  requirements-runtime.txt  requirements.txt  train_cross_validation.py
.github/workflows/: ci.yml
configs/: data.yaml  inference.yaml  train.yaml
data/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODEL_ARTIFACTS.md
final_app/: README.md  app.py  class_names.json  generate_model_stage_comparison.py  inference.py  requirements_app.txt
final_app/static/: style.css
final_app/templates/: index.html
src/urban_greening_classifier/: __init__.py  api.py  config.py  constants.py  data.py  device.py  inference.py  io.py  logging_utils.py  models.py  paths.py  reproducibility.py  transforms.py
tests/: test_api.py  test_config.py  test_data.py  test_inference.py  test_utils.py
